Closed Bug 308788 Opened 20 years ago Closed 20 years ago

Tabs cannot be closed in recent fx-trunk

Categories

(Firefox :: Tabbed Browser, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: nari_n_y, Assigned: mrbkap)

References

Details

(Keywords: regression)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050915 Firefox/1.6a1 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050915 Firefox/1.6a1 ID:2005091523 Recent firefox-trunk does not close tabs with middle-click or context-menu. Reproducible: Always Steps to Reproduce: 1. Open tabs 2. Try to close those tabs by middle-click or choose "close tab" from menu. 3. Actual Results: Tabs are not closed Expected Results: Tabs should be closed. JS error was shown in JS console: Error: [Exception... "Failure arg 0 [nsIDocShell.contentViewer]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://global/content/bindings/tabbrowser.xml :: updateTitlebar :: line 558" data: no] Source File: chrome://global/content/bindings/tabbrowser.xml Line: 558
Another error shown in JS console: Error: uncaught exception: [Exception... "Failure arg 0 [nsIDocShell.contentViewer]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://global/content/bindings/tabbrowser.xml :: removeTab :: line 1197" data: no]
Tab close works on Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050915 Firefox/1.6a1 ID:2005091517. However it does not work on Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050915 Firefox/1.6a1 ID:2005091520.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050915 Firefox/1.6a1 ID:2005091523 I see the same.
Confirmed here: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050916 Firefox/1.6a1 ID:2005091602 Error: uncaught exception: [Exception... "Failure arg 0 [nsIDocShell.contentViewer]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://global/content/bindings/tabbrowser.xml :: removeTab :: line 1197" data: no] Error: uncaught exception: [Exception... "Failure arg 0 [nsIDocShell.contentViewer]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://global/content/bindings/tabbrowser.xml :: updateTitlebar :: line 558" data: no]
Version: unspecified → Trunk
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050916 Firefox/1.6a1 [9/16/2005 1:02:00 PM version] confirmed, can't middle click close, can't hit x to close, can't right click the tab to close
Severity: normal → critical
Only change in g/c/b/tabbrowser.xml this month: http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&file=tabbrowser.xml&branch=&root=/cvsroot&subdir=mozilla/xpfe/global/resources/content/bindings&command=DIFF_FRAMESET&rev1=1.126&rev2=1.127 Summary of change: Bug 306810 Fix regressions from bug 302575 r=bz sr=darin Could this be the problem? It changed different lines, but it seems to be related. I could be way off, I'm new to this.
(In reply to comment #6) > Only change in g/c/b/tabbrowser.xml this month: > http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&file=tabbrowser.xml&branch=&root=/cvsroot&subdir=mozilla/xpfe/global/resources/content/bindings&command=DIFF_FRAMESET&rev1=1.126&rev2=1.127 > > Summary of change: > Bug 306810 Fix regressions from bug 302575 r=bz sr=darin > > Could this be the problem? It changed different lines, but it seems to be > related. I could be way off, I'm new to this. Both of those bugs were only checked into the Suite's tabbrowser.xml.
If anyone's got a build setup and some free time, I'd be interested in seeing if a local backout of the patch from bug 20022 fixes it.
*** Bug 308853 has been marked as a duplicate of this bug. ***
Attached patch fixSplinter Review
This is fallout from bug 308629. DocumentViewerImpl needs to QI to nsISupports. This has r+sr=dbaron (in person).
Assignee: nobody → mrbkap
Status: NEW → ASSIGNED
Attachment #196353 - Flags: superreview+
Attachment #196353 - Flags: review+
Fix checked into TRUNK.
Blocks: 308629
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
*** Bug 308877 has been marked as a duplicate of this bug. ***
Keywords: regression
*** Bug 308955 has been marked as a duplicate of this bug. ***
Verified FIXED using Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050917 Firefox/1.6a1
Status: RESOLVED → VERIFIED
Today i opened several links at the same time with Linky and again all tabs were not clickable and IIRC not closable. I had to restart the browser. It was FF 20050917 and in this build this should have been fixed.
*** Bug 309354 has been marked as a duplicate of this bug. ***
*** Bug 309457 has been marked as a duplicate of this bug. ***
*** Bug 310726 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: