bug 308788: DocumentViewerImpl needs to QI to nsISupports for things to work correctly. r+sr=dbaron